# MusicWorldSIM

./: CMakeLists.txt  MusicWorldSIM.rar  README.txt  add.cpp  add.h  create.cpp  create.h  delete.cpp  delete.h  edit.c  edit.cpp  edit.h  headFile.h  init.cpp  init.h  main.cpp  menu.cpp  notes  optiFun.cpp  optiFun.h  path.cpp  path.h  print.cpp  print.h  randData.cpp  randData.h  sort.cpp  sort.h  struct.h
Class/: ClassAlbum.cpp  ClassAlbum.h  ClassBeat.cpp  ClassBeat.h  ClassMusic.cpp  ClassMusic.h  ClassMusicText.cpp  ClassMusicText.h  ClassMusician.cpp  ClassMusician.h  ClassPerson.cpp  ClassPerson.h  ClassProducent.cpp  ClassProducent.h
Fun/: funAdd.cpp  funAdd.h  funCreate.cpp  funCreate.h  funDelete.cpp  funDelete.h  funEdit.cpp  funEdit.h  funInit.cpp  funInit.h  funLoad.cpp  funLoad.h  funOptiFun.cpp  funOptiFun.h  funPrint.cpp  funPrint.h  funRandData.cpp  funRandData.h  funSave.cpp  funSave.h  funSort.cpp  funSort.h
base/: baseMain.cpp  baseStruct.h
blad/: create.cpp  menu.cpp
head/: headHeadFile.h  headLib.h
