cmake_minimum_required(VERSION 3.24)
project(lab)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab main.cpp headFile.h init.cpp optiFun.cpp menu.cpp create.cpp create.cpp randData.cpp delete.cpp print.cpp print.cpp add.cpp create.h add.h delete.h init.h optiFun.h print.h randData.h struct.h sort.h sort.cpp edit.h edit.c edit.cpp)
