cmake_minimum_required(VERSION 3.24)
project(lab)

set(CMAKE_CXX_STANDARD 20)

add_executable(lab base/baseMain.cpp head/headHeadFile.h Fun/funInit.cpp Fun/funOptiFun.cpp Fun/funCreate.cpp Fun/funCreate.cpp Fun/funRandData.cpp Fun/funDelete.cpp Fun/funPrint.cpp Fun/funPrint.cpp Fun/funAdd.cpp Fun/funCreate.h Fun/funAdd.h Fun/funDelete.h Fun/funInit.h Fun/funOptiFun.h Fun/funPrint.h Fun/funRandData.h base/baseStruct.h Fun/funSort.h Fun/funSort.cpp Fun/funEdit.h Fun/funEdit.cpp Class/ClassMusic.h Class/ClassMusic.cpp Class/ClassAlbum.cpp Class/ClassAlbum.h Class/ClassMusician.cpp Class/ClassMusician.h Class/ClassPerson.h Class/ClassPerson.cpp Class/ClassProducent.h Class/ClassProducent.cpp Class/ClassBeat.h Class/ClassBeat.cpp Class/ClassMusicText.cpp Class/ClassMusicText.h path.cpp path.h Fun/funSave.cpp Fun/funSave.h head/headLib.h Fun/funLoad.cpp Fun/funLoad.h)
